== VERSION HISTORY ==

2.0 ():
 - upgrade for Elgg 1.9
 - protect anonymous user pages with admin_gatekeeper
 - remove custom settings for styling anonymous user - use core profile/settings/avatar page
 - remove user hover menu for anonymous entirely (as of Elgg 1.11)
 - removes recaptcha (use recaptcha plugin)
 - optional add to river setting

1.0 -
- combines moderated_comments and speak_freely plugins
- adds required email field that is only sent in notifications, along with the IP address of the poster. These are not permanently stored - they are to help the owner contact the poster by email if needed.
- implements stopforumspam integration to prevent known spammers from adding comments
- prevents saving of URLs or other rich text formatting beyond simple bold, italic, etc.